2006-04-16  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/multiboot.texi: Correct the offset of address
	fields. Reported by Jeroen Dekkers.

2006-03-21  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/builtins.c (setup_func): Specify the size of DEVICE to
	grub_strncat instead of a strange number 256. Reported by Vitaly
	Fertman <vitaly@namesys.com>.

2005-09-29  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/multiboot.texi: Fix a bug in the byte order of
	boot_device. I hope this won't affect any OS image.
	Increased the version number to 0.6.94.

2005-09-28  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/boot.c (load_image): Even if an OS image is an ELF
	object, use the a.out kludge if MULTIBOOT_AOUT_KLUDGE is
	specified.

2005-05-08  Yoshinori K. Okuji  <okuji@enbug.org>

	* configure.ac (AC_INIT): Upgraded to 0.97.

	* compile: Copied from Automake 1.9.4.
	* config.guess: Likewise.
	* config.sub: Likewise.
	* depcomp: Likewise.
	* install-sh: Likewise.
	* missing: Likewise.
	* mkinstalldirs: Likewise.
	* mdate-sh: Likewise.
	* docs/texinfo.tex: Likewise.

2005-05-08  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/fsys_xfs.c (next_dentry): Use arrays of arrays instead of
	arrays of pointers for USUAL, to avoid read-only strings. Reported
	by Sven Wegener <swegener@gentoo.org>.

2005-03-28  Yoshinori K. Okuji  <okuji@enbug.org>

	* lib/device.c (get_drive_geometry): Use ST.ST_SIZE instead of
	ST.ST_BLOCKS to get the total number of sectors, because st_blocks
	is not the same if it is a sparse file.

2005-03-19  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/stage2.c (cmain): Initialize DEFAULT_FILE to an empty
	string. Reported by NATORI Shin <natori@adm.s.u-tokyo.ac.jp>.

2005-03-15  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/fsys_fat.c (fat_mount): Ignore the 3rd bit of a media
	descriptor, because some BIOSes overwrite this value, according
	to the storage mode (e.g. USB Floppy or USB HDD).

2005-02-16  Yoshinori K. Okuji  <okuji@enbug.org>
